Parse deals from XML.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="get_deals">Get deals</string>
+    <string name="show_list">Show list</string>
+    <string name="export_database">Export Database</string>
 </resources>
