--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="get_deals">Get deals</string>
     <string name="show_list">Show list</string>
+    <string name="title_activity_more_details">MoreDetailsActivity</string>
 </resources>
